issue-36: Let FXyz-Core run on 8 as well